--- a/results.yaml
+++ b/results.yaml
@@ -25,6 +25,32 @@ results:
       # Fails
     author: null
     timestamp: '2018-11-29'
+    PS_UUID: 035dd920-f377-11e8-a3f1-034aa33f1e82
+  - provision_time: 0m 56s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 10
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-11-29'
     PS_UUID: 099ab260-f370-11e8-a4b6-37a77c04c52a
   - provision_time: 0m 36s
     image_size: 1724 Mb
