--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 5s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-29'
+    PS_UUID: 7e97f3e0-f3c3-11e8-9b63-5f0cf95a7297
+  - provision_time: 1m 5s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
