--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 11s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-29'
+    PS_UUID: 620753a0-f3ce-11e8-87c6-5b76c494a173
+  - provision_time: 1m 11s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
