--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 1m 12s
+    provision_time: 1m 10s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Enter running application container
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Enter running application container
+          ✖ Enter running application container
+          undefined
+    author: null
+    timestamp: '2018-11-29'
+    PS_UUID: c1b562f0-f3cf-11e8-a5dc-31bac3fc9c13
+  - provision_time: 1m 12s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
