--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 8d04dd00-f7a9-11e8-976b-9dbacd7771b7
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 73c7fca0-f7a9-11e8-a348-9fe704d9c0a7
   - body: |-
       # Tests 
