--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 6b61e980-f7aa-11e8-a1eb-fd1a86e65e7e
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: bfb82450-f7a9-11e8-8a1c-85ffa3aee2df
   - body: |-
       # Tests 
