--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: e651ed70-f7aa-11e8-86a8-519ff22c7465
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: c431a910-f7aa-11e8-9b2f-cf0f4540caf2
   - body: |-
       # Tests 
