--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 73dcdcd0-f7ac-11e8-bf73-c195e4bc7f98
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 4b48add0-f7ac-11e8-887d-038edd35e406
   - body: |-
       # Tests 
