--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 56s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
+    PS_UUID: 946f7d80-f7c6-11e8-be84-159a915d0867
+  - provision_time: 0m 56s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
