--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,33 @@
 results:
   -
-    provision_time: 1m 6s
+    provision_time: 1m 29s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+       - ✔ Test setting a device environment variable
+
+
+      # Summary
+      - planned: 11
+      - pass: 11
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-4
+    PS_UUID: 26e25e50-f7de-11e8-922d-a78cc07bc259
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
