--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,37 @@
 results:
   -
-    provision_time: 1m 7s
+    provision_time: 1m 18s
+    image_size: 2588 Mb
+    balena_os_version: 2.27.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ General Bluetooth test
+       - ✔ Image filename format
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.27.0+rev1.prod -> 2.27.0+rev1.prod]
+       - ✔ Sync application container
+       - ✔ Update device status with resin-device-progress
+       - ✔ Update supervisor through the API
+       - ✔ Push a multi-container application
+       - ✔ Reload supervisor on a running device
+       - ✔ Boot/Shutdown splash screen
+       - ✔ Reboot while application is running
+       - ✔ Enter running application container
+       - ✔ Kernel boot logo/Reboot splash screen
+       - ✔ Set device service variable when application is running
+
+
+      # Summary
+      - planned: 15
+      - pass: 15
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-5
+    PS_UUID: e774c5b0-f872-11e8-a1b7-dfdf2413b37e
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
