--- a/results.yaml
+++ b/results.yaml
@@ -25,6 +25,32 @@ results:
       # Fails
     author: null
     timestamp: 2018-12-5
+    PS_UUID: 603f1360-f887-11e8-afc8-d50e85a1a9f2
+  - provision_time: 0m 56s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 10
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-5
     PS_UUID: 552fe4d0-f87e-11e8-b854-d3bbf2a567c0
   - provision_time: 1m 8s
     image_size: 1724 Mb
