--- a/results.yaml
+++ b/results.yaml
@@ -15,6 +15,32 @@ results:
        - ✔ Reload supervisor on a running device
        - ✔ Update device status with resin-device-progress
        - ✔ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 10
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-5
+    PS_UUID: 4391e210-f8a0-11e8-83e4-c7e0a4237734
+  - provision_time: 0m 56s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
        - ✔ Test setting a device environment variable
 
 
