--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,38 @@
 results:
   -
-    provision_time: 0m 57s
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✖ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 8
+      - fail: 2
+
+      # Fails
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+      ## Push a multi-container application
+          ✖ Push a multi-container application
+          undefined
+    author: null
+    timestamp: 2018-12-6
+    PS_UUID: 635e9fa0-f947-11e8-98bc-e9e081bab72f
+  - provision_time: 0m 57s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
