--- a/results.yaml
+++ b/results.yaml
@@ -9,6 +9,33 @@ results:
        - ✔ Device reported hostOS version
        - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
        - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Move device between applications
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 11
+      - pass: 11
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-12-6
+    PS_UUID: 52a72f50-f948-11e8-85c3-09e950d698ec
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
        - ✖ Push a mono-container to the application
        - ✖ Push a multi-container application
        - ✔ Update supervisor through the API
