--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,89 @@
 results:
   -
-    provision_time: 1m 7s
+    body: >-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Balena host OS update [2.13.6+rev2.prod -> 2.28.0+rev1.prod]
+       - ✖ Reboot while application is running
+       - ✖ child test left in queue: t.test Device reported hostOS version
+       - ✖ child test left in queue: t.test Enter running application container
+       - ✖ child test left in queue: t.test Balena host OS update [2.28.0+rev1.prod -> 2.28.0+rev1.prod]
+       - ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+       - ✖ child test left in queue: t.test Image filename format
+       - ✖ child test left in queue: t.test Push a mono-container to the application
+       - ✖ child test left in queue: t.test General Bluetooth test
+       - ✖ child test left in queue: t.test Push a multi-container application
+       - ✖ child test left in queue: t.test Update supervisor through the API
+       - ✖ child test left in queue: t.test Reload supervisor on a running device
+       - ✖ child test left in queue: t.test Update device status with resin-device-progress
+       - ✖ child test left in queue: t.test Boot/Shutdown splash screen
+       - ✖ child test left in queue: t.test Sync application container
+       - ✖ child test left in queue: t.test Set device service variable when application is running
+
+
+      # Summary
+
+      - planned: 3
+
+      - pass: 2
+
+      - fail: 15
+
+
+      # Fails
+
+      ## Reboot while application is running
+          ✖ Reboot while application is running
+          undefined
+      ## child test left in queue: t.test Device reported hostOS version
+          ✖ child test left in queue: t.test Device reported hostOS version
+          undefined
+      ## child test left in queue: t.test Enter running application container
+          ✖ child test left in queue: t.test Enter running application container
+          undefined
+      ## child test left in queue: t.test Balena host OS update
+      [2.28.0+rev1.prod -> 2.28.0+rev1.prod]
+          ✖ child test left in queue: t.test Balena host OS update [2.28.0+rev1.prod -> 2.28.0+rev1.prod]
+          undefined
+      ## child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          undefined
+      ## child test left in queue: t.test Image filename format
+          ✖ child test left in queue: t.test Image filename format
+          undefined
+      ## child test left in queue: t.test Push a mono-container to the
+      application
+          ✖ child test left in queue: t.test Push a mono-container to the application
+          undefined
+      ## child test left in queue: t.test General Bluetooth test
+          ✖ child test left in queue: t.test General Bluetooth test
+          undefined
+      ## child test left in queue: t.test Push a multi-container application
+          ✖ child test left in queue: t.test Push a multi-container application
+          undefined
+      ## child test left in queue: t.test Update supervisor through the API
+          ✖ child test left in queue: t.test Update supervisor through the API
+          undefined
+      ## child test left in queue: t.test Reload supervisor on a running device
+          ✖ child test left in queue: t.test Reload supervisor on a running device
+          undefined
+      ## child test left in queue: t.test Update device status with
+      resin-device-progress
+          ✖ child test left in queue: t.test Update device status with resin-device-progress
+          undefined
+      ## child test left in queue: t.test Boot/Shutdown splash screen
+          ✖ child test left in queue: t.test Boot/Shutdown splash screen
+          undefined
+      ## child test left in queue: t.test Sync application container
+          ✖ child test left in queue: t.test Sync application container
+          undefined
+      ## child test left in queue: t.test Set device service variable when
+      application is running
+          ✖ child test left in queue: t.test Set device service variable when application is running
+          undefined
+    timestamp: 2018-12-6
+    PS_UUID: a2dd6db0-f95f-11e8-ad15-b1edfa8b30cf
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
